Adjust social icon size on mobile and prevent hover on incompatible devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -168,7 +168,7 @@ td {
     font-size: 2vh;
 }
 
-.socials img {
+.socials a img {
     height: 8vh;
     margin: 0 10px;
 }
